<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/tiny_dim"
        android:background="@drawable/field"
        tools:context="com.example.android.noonudacitygoogleprojects.MainActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_dim"
            android:orientation="horizontal"
            android:id="@+id/score_container">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/standard_dim"
                    android:gravity="center"
                    android:textSize="@dimen/big_text_dim"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@android:color/white"
                    android:textAllCaps="true"
                    android:text="@string/team_home" />

                <!-- Team A's score -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/big_dim"
                        android:text="0"
                        android:textSize="@dimen/bigger_text_dim"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@android:color/white"
                        android:id="@+id/team_a_score"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ball_3"/>
                </LinearLayout>

                <!-- Team A's buttons -->
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/bigger_dim"
                    android:text="@string/goal_btn_text"
                    android:layout_gravity="center"
                    android:onClick="addPoints"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="@dimen/big_dim"
                    android:layout_marginRight="@dimen/big_dim"
                    android:id="@+id/goal_btn_a"/>
                <!-- Shots on goal, Off Side and Corner Kick team A -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/big_dim"
                    android:layout_marginBottom="@dimen/standard_dim">
                    <Button
                        android:layout_width="@dimen/biggest_dim"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="0dp"
                        android:layout_gravity="right"
                        android:onClick="addPoints"
                        android:background="@color/colorPrimaryDark"
                        android:textSize="@dimen/tiny_text_dim"
                        android:textColor="@android:color/white"
                        android:text="@string/shot_on_goal_action_btn"
                        android:id="@+id/shot_on_goal_btn_a"/>
                    <TextView
                        android:layout_width="@dimen/slightly_bigger_dim"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/tiny_dim"
                        android:layout_gravity="right"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:text="0"
                        android:textSize="@dimen/slightly_big_text"
                        android:textColor="@android:color/white"
                        android:id="@+id/shot_on_goal_a"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/big_dim"
                    android:layout_marginBottom="@dimen/standard_dim">
                    <Button
                        android:layout_width="@dimen/biggest_dim"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="0dp"
                        android:layout_gravity="right"
                        android:onClick="addPoints"
                        android:background="@color/colorPrimaryDark"
                        android:textSize="@dimen/tiny_text_dim"
                        android:textColor="@android:color/white"
                        android:text="@string/off_side_action_btn"
                        android:id="@+id/off_side_btn_a"/>
                    <TextView
                        android:layout_width="@dimen/slightly_bigger_dim"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/tiny_dim"
                        android:layout_gravity="right"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:text="0"
                        android:textSize="@dimen/slightly_big_text"
                        android:textColor="@android:color/white"
                        android:id="@+id/off_side_a"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/big_dim"
                    android:layout_marginBottom="@dimen/standard_dim">
                    <Button
                        android:layout_width="@dimen/biggest_dim"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="0dp"
                        android:layout_gravity="right"
                        android:onClick="addPoints"
                        android:background="@color/colorPrimaryDark"
                        android:textSize="@dimen/tiny_text_dim"
                        android:textColor="@android:color/white"
                        android:text="@string/corner_kick_action_btn"
                        android:id="@+id/corner_kick_btn_a"/>
                    <TextView
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="8dp"
                        android:layout_gravity="right"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:text="0"
                        android:textSize="25sp"
                        android:textColor="@android:color/white"
                        android:id="@+id/corner_kick_a"/>
                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_height="match_parent"
                android:layout_width="1dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/standard_dim"
                    android:gravity="center"
                    android:textSize="@dimen/big_text_dim"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@android:color/white"
                    android:textAllCaps="true"
                    android:text="@string/team_away" />
                <!-- Team B's score -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/big_dim"
                        android:text="0"
                        android:textSize="@dimen/bigger_text_dim"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@android:color/white"
                        android:id="@+id/team_b_score"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ball_3"/>
                </LinearLayout>

                <!-- Team B's buttons -->
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/bigger_dim"
                    android:text="@string/goal_btn_text"
                    android:layout_gravity="center"
                    android:onClick="addPoints"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="@dimen/big_dim"
                    android:layout_marginRight="@dimen/big_dim"
                    android:id="@+id/goal_btn_b"/>
                <!--Shots on Goal, Off Sides and Corner Kicks Team B -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginRight="@dimen/big_dim"
                    android:layout_marginBottom="@dimen/standard_dim">
                    <TextView
                        android:layout_width="@dimen/slightly_bigger_dim"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/tiny_dim"
                        android:layout_gravity="left"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:text="0"
                        android:textSize="@dimen/slightly_big_text"
                        android:textColor="@android:color/white"
                        android:id="@+id/shot_on_goal_b"/>
                    <Button
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="0dp"
                        android:layout_gravity="right"
                        android:onClick="addPoints"
                        android:background="@color/colorPrimaryDark"
                        android:textSize="12sp"
                        android:textColor="@android:color/white"
                        android:text="Shot on Goal"
                        android:id="@+id/shot_on_goal_btn_b"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginRight="@dimen/big_dim"
                    android:layout_marginBottom="@dimen/standard_dim">
                    <TextView
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="8dp"
                        android:layout_gravity="left"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:text="0"
                        android:textSize="25sp"
                        android:textColor="@android:color/white"
                        android:id="@+id/off_side_b"/>
                    <Button
                        android:layout_width="@dimen/biggest_dim"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="0dp"
                        android:layout_gravity="right"
                        android:onClick="addPoints"
                        android:background="@color/colorPrimaryDark"
                        android:textSize="@dimen/tiny_text_dim"
                        android:textColor="@android:color/white"
                        android:text="@string/off_side_action_btn"
                        android:id="@+id/off_side_btn_b"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginRight="@dimen/big_dim"
                    android:layout_marginBottom="@dimen/standard_dim">
                    <TextView
                        android:layout_width="@dimen/slightly_bigger_dim"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="@dimen/tiny_dim"
                        android:layout_gravity="left"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:text="0"
                        android:textSize="@dimen/slightly_big_text"
                        android:textColor="@android:color/white"
                        android:id="@+id/corner_kick_b"/>
                    <Button
                        android:layout_width="@dimen/biggest_dim"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="0dp"
                        android:layout_gravity="right"
                        android:onClick="addPoints"
                        android:background="@color/colorPrimaryDark"
                        android:textSize="@dimen/tiny_text_dim"
                        android:textColor="@android:color/white"
                        android:text="@string/corner_kick_action_btn"
                        android:id="@+id/corner_kick_btn_b"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/score_container"
            android:layout_centerInParent="true"
            android:onClick="resetScores"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/reset_action_btn"/>
    </RelativeLayout>
</ScrollView>